users can now view their fav authors and genres

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_notifications">Notifications</string>
     <string name="cab_frag_name">Cabinet</string>
     <string name="mus_frag_name">Music</string>
+    <string name="placeholder">PLACEHOLDER</string>
+    <string name="del">DEL</string>
 </resources>
