--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="add">Add</string>
     <string name="my_favorite_authors">My favorite authors</string>
     <string name="logout">Logout</string>
+    <string name="update">Update</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="login">login</string>
+    <string name="password">password</string>
+    <string name="logon">Logon</string>
+    <string name="add_music">Add music</string>
 </resources>
