--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="password">password</string>
     <string name="logon">Logon</string>
     <string name="add_music">Add music</string>
+    <string name="author">Author</string>
+    <string name="genre">Genre</string>
+    <string name="music">Music</string>
 </resources>
